tests/prioritise-hcloud-volume-pods/longhorn-claim/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-claim
  namespace: observability
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: data
  containers:
    - name: app
      image: registry.k8s.io/pause:3.10
